2009-11-13  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Clear the undo stack in before each new test run.

        Locally fixes 3 incorrect layouts, 9 timeouts and 7 crashes.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):

2009-11-13  Andras Becsi  <becsi.andras@stud.u-szeged.hu>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Add WebKitUsesPageCachePreferenceKey overriding support to DRT's LayoutTestController.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::WebPage::resetSettings):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::overridePreference):

2009-11-13  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Update committers.py based on svn records
        https://bugs.webkit.org/show_bug.cgi?id=31366

        This list was generated using validate-committer-lists from
        https://bugs.webkit.org/show_bug.cgi?id=30970
        and makes committers.py current for committers who have
        committed in the last 3 years.

        * Scripts/modules/committers.py:

2009-11-12  Anantanarayanan G Iyengar  <ananta@chromium.org>

        Reviewed by Adam Barth.

        The document-open.html test was flaky at times. The test invokes the layout test plugin
        which in its destroy stream handler opens a new document. This basically tears down the
        stream and the associated plugin instance. The pluginLog function in the layout test
        plugin attempts to retrieve the window script object on a torn down plugin instance
        which crashed consistently on windows in the debugger. The functions which issue
        these logs already have a valid window script object. We now have variants of the pluginLog
        function which take in a window script object with and without variable arguments. 
