@@ -79,39 +79,8 @@ namespace WebCore {
 const unsigned int maxViewWidth = 800;
 const unsigned int maxViewHeight = 600;
 
-class WebPage : public QWebPage {
-    Q_OBJECT
-public:
-    WebPage(QWidget *parent, DumpRenderTree *drt);
-
-    QWebPage *createWindow(QWebPage::WebWindowType);
-
-    void javaScriptAlert(QWebFrame *frame, const QString& message);
-    void javaScriptConsoleMessage(const QString& message, int lineNumber, const QString& sourceID);
-    bool javaScriptConfirm(QWebFrame *frame, const QString& msg);
-    bool javaScriptPrompt(QWebFrame *frame, const QString& msg, const QString& defaultValue, QString* result);
-
-    void resetSettings();
-
-public slots:
-    bool shouldInterruptJavaScript() { return false; }
-
-protected:
-    bool acceptNavigationRequest(QWebFrame* frame, const QNetworkRequest& request, NavigationType type);
-
-private slots:
-    void setViewGeometry(const QRect &r)
-    {
-        QWidget *v = view();
-        if (v)
-            v->setGeometry(r);
-    }
-private:
-    DumpRenderTree *m_drt;
-};
-
 WebPage::WebPage(QWidget *parent, DumpRenderTree *drt)
-    : QWebPage(parent), m_drt(drt)
+    : QWebPage(parent), m_drt(drt), m_enableTextOutput(false)
 {
     QWebSettings* globalSettings = QWebSettings::globalSettings();
 
@@ -156,6 +125,9 @@ QWebPage *WebPage::createWindow(QWebPage::WebWindowType)
 
 void WebPage::javaScriptAlert(QWebFrame*, const QString& message)
 {
+    if (!m_enableTextOutput)
+        return;
+
     fprintf(stdout, "ALERT: %s\n", message.toUtf8().constData());
 }
 
@@ -169,6 +141,9 @@ static QString urlSuitableForTestResult(const QString& url)
 
 void WebPage::javaScriptConsoleMessage(const QString& message, int lineNumber, const QString&)
 {
+    if (!m_enableTextOutput)
+        return;
+
     QString newMessage;
     if (!message.isEmpty()) {
         newMessage = message;
@@ -184,12 +159,18 @@ void WebPage::javaScriptConsoleMessage(const QString& message, int lineNumber, c
 
 bool WebPage::javaScriptConfirm(QWebFrame*, const QString& msg)
 {
+    if (!m_enableTextOutput)
+        return true;
+
     fprintf(stdout, "CONFIRM: %s\n", msg.toUtf8().constData());
     return true;
 }
 
 bool WebPage::javaScriptPrompt(QWebFrame*, const QString& msg, const QString& defaultValue, QString* result)
 {
+    if (!m_enableTextOutput)
+        return true;
+
     fprintf(stdout, "PROMPT: %s, default text: %s\n", msg.toUtf8().constData(), defaultValue.toUtf8().constData());
     *result = defaultValue;
     return true;
@@ -224,8 +205,10 @@ bool WebPage::acceptNavigationRequest(QWebFrame* frame, const QNetworkRequest& r
             typeDescription = "illegal value";
         }
 
-        fprintf(stdout, "Policy delegate: attempt to load %s with navigation type '%s'\n",
-                url.toUtf8().constData(), typeDescription.toUtf8().constData());
+        if (m_enableTextOutput)
+            fprintf(stdout, "Policy delegate: attempt to load %s with navigation type '%s'\n",
+                    url.toUtf8().constData(), typeDescription.toUtf8().constData());
+
         m_drt->layoutTestController()->notifyDone();
     }
     return QWebPage::acceptNavigationRequest(frame, request, type);
@@ -359,6 +342,7 @@ void DumpRenderTree::open(const QUrl& aurl)
 #endif
 
     qt_dump_frame_loader(url.toString().contains("loading/"));
+    m_page->enableTextOutput(true);
     m_page->mainFrame()->load(url);
 }
 
@@ -700,5 +684,3 @@ void DumpRenderTree::initializeFonts()
 #endif
 
 }
-
-#include "DumpRenderTree.moc"
